--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "LawnConnect",
+  "image": "https://yourdomain.com/logo.png",
+  "url": "https://yourdomain.com",
+  "telephone": "+1 (876) 000-0000",
+  "priceRange": "$$",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "Jamaica"
+  },
+  "description": "Fast, affordable lawn care and landscaping services across Jamaica. Book mowing, trimming, yard cleanup, and garden maintenance instantly through LawnConnect.",
+  "areaServed": "Jamaica",
+  "serviceType": ["Lawn Mowing", "Landscaping", "Yard Cleanup"]
+}
+</script>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>LawnConnect - Connect Customers with Lawn Care Providers in Jamaica</title>
     <meta name="description" content="Jamaica's premier marketplace for lawn cutting services. Customers post jobs starting from J$7,000, service providers find work. Secure payments with 10% platform fee." />
+  <meta name="keywords" content="lawn care Jamaica, lawn mowing Jamaica, landscaping Jamaica, yard cleaning Jamaica, garden service Jamaica, Kingston lawn mowing, Portmore lawn care">
     <meta name="author" content="LawnConnect" />
 
     <!-- Favicon -->
@@ -19,9 +39,20 @@
     <meta name="format-detection" content="telephone=no" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
+    <meta property="og:title" content="LawnConnect – Jamaica’s #1 Lawn Care Service">
+<meta property="og:description" content="Affordable, fast yard care. Book trusted lawn professionals across Jamaica in minutes.">
+<meta property="og:image" content="/your-image.jpg">
+<meta property="og:url" content="https://yourdomain.com">
+<meta property="og:type" content="website">
+
     <meta property="og:title" content="LawnConnect - Jamaica's Lawn Care Marketplace" />
     <meta property="og:description" content="Connect homeowners with professional lawn cutting services across Jamaica" />
     <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="LawnConnect – Yard Care Made Easy">
+<meta name="twitter:description" content="Fast, affordable lawn care anywhere in Jamaica. Book online.">
+<meta name="twitter:image" content="/your-image.jpg">
 
     <meta name="twitter:card" content="summary_large_image" />
   </head>
